[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medallion_elt_pipeline"
version = "0.1.0"
description = "E2E ELT pipeline: ADLS → Snowflake → dbt Cloud, orchestrated by Dagster+"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "snowflake-connector-python",
    "cryptography",
    "requests",
]

[tool.setuptools.packages.find]
include = ["dagster_code*"]